dygraphs 1.1.1.3 (unreleased)
--------------------------------------------------------------------------------

* Added callbacks that react when the user clicks on the graph


dygraphs 1.1.1.2 
--------------------------------------------------------------------------------

* Fix for shiny input binding regression introduced in move to instance
  bound widgets (#123)


dygraphs 1.1.1-1
--------------------------------------------------------------------------------

* Create shiny input binding after dygraph is created (#121)

* Reflect color in dyEvent text label (#122)


dygraphs 1.1.1.0
--------------------------------------------------------------------------------

* New dyPlugin function for including dygraphs plugins

* Properly handle NULL dyEvent label (#112)

* Handle milliseconds in time events (#85)

* Add elementId parameter to dygraph function to specify explicit elementId

* Implement factory method so dygraph is addressable from widget instance:
  e.g. HTMLWidgets.getInstance(document.getElementById('mywidget')).dygraph


dygraphs 0.9
--------------------------------------------------------------------------------

* Handle vector data in dyEvent

* Don't do sizeChanged polling (no longer required)

* Option to disable y-axis touch events on mobile devices


dygraphs 0.8
--------------------------------------------------------------------------------

* Manage visibility of dygraphs in all types of boostrap tab panes

* Call widget.resize whenever parent size changes


dygraphs 0.7
--------------------------------------------------------------------------------

* Ensure that dygraphs are shown properly in R Markdown tabsets 

* Ensure that dygraphs are shown properly in reveal.js presentations

* Fix bug which prevented custom plotters from working in dySeries


dygraphs 0.6
--------------------------------------------------------------------------------

* Add support for plotting data with a numeric x-axis (previously only time series