@@ -205,8 +205,9 @@ HTMLWidgets.widget({
    	
         // add shiny inputs for date window and click
         if (HTMLWidgets.shinyMode) {
-          this.addClickShinyInput(el.id);
-          this.addDateWindowShinyInput(el.id);
+          var isDate = x.format == "date";
+          this.addClickShinyInput(el.id, isDate);
+          this.addDateWindowShinyInput(el.id, isDate);
         }
         
         // set annotations
@@ -618,7 +619,7 @@ HTMLWidgets.widget({
         };
       },
       
-      addDateWindowShinyInput: function(id) {
+      addDateWindowShinyInput: function(id, isDate) {
           
         // check for an existing drawCallback
         var prevDrawCallback = dygraph.getOption("drawCallback");
@@ -631,13 +632,14 @@ HTMLWidgets.widget({
               prevDrawCallback(me, initial);
             // fire input change
             var range = dygraph.xAxisRange();
-            var dateWindow = [new Date(range[0]), new Date(range[1])];
-            Shiny.onInputChange(id + "_date_window", dateWindow); 
+            if (isDate)
+              range = [new Date(range[0]), new Date(range[1])];
+            Shiny.onInputChange(id + "_date_window", range); 
           }
         });
       },
       
-      addClickShinyInput: function(id) {
+      addClickShinyInput: function(id, isDate) {
         
         var prevClickCallback = dygraph.getOption("clickCallback")
         
@@ -650,8 +652,8 @@ HTMLWidgets.widget({
               
 			      // fire input change
             Shiny.onInputChange(el.id + "_click", {
-      				x: new Date(x),
-      				x_closest_point: new Date(points[0].xval),
+      				x: isDate ? new Date(x) : x,
+      				x_closest_point: isDate ? new Date(points[0].xval) : points[0].xval,
       				y_closest_point: points[0].yval,
       				'.nonce': Math.random() // Force reactivity if click hasn't changed
 			      }); 
